voorlopige 3d afbeeldingen toegevoegd

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                Quick, easy, and affordable.
                Your product experience will never be the same.
             </p>
+            <img src="./assets/3d-test.png" alt="270 Degrees 2026">
             <ul>
                 <li>Easy to implement</li>
                 <li>Works on all environsments</li>
@@ -44,6 +45,7 @@
             <p>People are sensitive for personalization.
                  Our configurator customizes your products for an optimal personal experience.
             </p>
+            <img src="./assets/3d-test.png" alt="270 Degrees 2026">
             <ul>
                 <li>Real time</li>
                 <li>High quality</li>
@@ -56,6 +58,7 @@
             <p>Ylour 3D assets can also be used in a fully tailored experience.
                  We work with the best agencies to design and build such solutions.
             </p>
+            <img src="./assets/3d-test.png" alt="270 Degrees 2026">
             <ul>
                 <li>Unique experience</li>
                 <li>Tailor made</li>
