--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
  
         <nav>          
             <a href="index.html"><img class="logo" src="./assets/logo.png" alt="Logo 270 Degrees"></a>
-            <ul class="navigatie-desktop">
+            
+           <!--  <ul>
               <li><a href="assets.html">Assets</a></li>
               <li><a href="solutions.html">Solutions</a></li>
               <li><a href="cases.html">Cases</a></li>
               <li><a href="about.html">About 270</a></li>
               <li><a href="contact.html">Contact us</a></li>
-            </ul>     
-            <button class="hamburgertje" popovertarget="mypopover"><img src="./assets/menu.svg" alt="Menu"></button> <!-- Code voor hamburger menu -->
+            </ul>  -->
+            <button  popovertarget="mypopover"><img src="./assets/menu.svg" alt="Menu"></button> <!-- Code voor hamburger menu -->
 
         </nav>
-        
+
     </header>
 
     <main>
       <h1>270 Degrees</h1>
       <article>
-        <section>
+        <section class="content">
             <h2>Viewer</h2>
             <p>Our viewer displays your products in 3D.
                Quick, easy, and affordable.
@@ -40,7 +41,7 @@
                 <li>Boost your product experience</li>
             </ul>
         </section>
-        <section>
+        <section class="content">
             <h2>Configurator</h2>
             <p>People are sensitive for personalization.
                  Our configurator customizes your products for an optimal personal experience.
@@ -53,7 +54,7 @@
             </ul>
 
         </section>
-        <section>
+        <section class="content">
             <h2>Full Experience</h2>
             <p>Ylour 3D assets can also be used in a fully tailored experience.
                  We work with the best agencies to design and build such solutions.
