Alt-tags toegevoegd #5

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="content">
 
         <article class="content-article">
-<div class="js-270viewer" data-270-model="generic-shoe" data-270-width="375px" data-270-height="375px" data-270-autorotate="true"></div>
+<div class="js-270viewer" data-270-model="generic-shoe" data-270-width="375px" data-270-height="375px" data-270-autorotate="true" alt="3d viewer with a shoe"></div>
             <div class="content-article-text">
                 <h2>Viewer</h2>
                 <p>Our viewer displays your products in 3D.
@@ -64,7 +64,7 @@
         </article>
         
         <article class="content-article">
-<div class="js-270viewer" data-270-model="lunchbox" data-270-width="375px" data-270-height="500px" data-270-autorotate="true"></div>
+<div class="js-270viewer" data-270-model="lunchbox" data-270-width="375px" data-270-height="500px" data-270-autorotate="true" alt="3d viewer with a lunchbox"></div>
             <div class="content-article-text">
                 <h2>Configurator</h2>
                 <p>People are sensitive for personalization.
@@ -82,7 +82,7 @@
         </article>
         
         <article class="content-article">
-<div class="js-270viewer" data-270-model="generic-polo" data-270-width="375px" data-270-height="500px" data-270-autorotate="true"></div>
+<div class="js-270viewer" data-270-model="generic-polo" data-270-width="375px" data-270-height="500px" data-270-autorotate="true" alt="3d viewer with a shirt"></div>
             <div class="content-article-text">
                 <h2>Full Experience</h2>
                 <p>Your 3D assets can also be used in a fully tailored experience.
